--- a/jdk1.8/包装类.md
+++ b/jdk1.8/包装类.md
@@ -271,3 +271,45 @@ public final class Double extends Number implements Comparable<Double> {
 }
 ```
 
+##### Character
+
+###### 类的属性
+
+```java
+public final
+class Character implements java.io.Serializable, Comparable<Character> {
+    // 转换成字符串和从字符串转换的最小进制
+    public static final int MIN_RADIX = 2;
+    // 转换成字符串和从字符串转换的最大进制
+    public static final int MAX_RADIX = 36;
+    // char的最小值
+    public static final char MIN_VALUE = '\u0000';
+    // char的最大值
+    public static final char MAX_VALUE = '\uFFFF';
+    // 获取该类的原始类
+    public static final Class<Character> TYPE = (Class<Character>) Class.getPrimitiveClass("char");
+    // Character的值
+    private final char value;
+    // 位数
+    public static final int SIZE = 16;
+    // 字节数，占用2个字节
+    public static final int BYTES = SIZE / Byte.SIZE;
+}
+```
+
+###### 缓存
+
+```java
+// 加载Character类时，将0~127加载到内存中
+private static class CharacterCache {
+    private CharacterCache(){}
+
+    static final Character cache[] = new Character[127 + 1];
+
+    static {
+        for (int i = 0; i < cache.length; i++)
+            cache[i] = new Character((char)i);
+    }
+}
+```
+
