--- a/jdk1.8/集合工具类.md
+++ b/jdk1.8/集合工具类.md
@@ -134,3 +134,52 @@ public static String toString(int[] a) {
 }
 ```
 
+##### Collections
+
+###### sort方法
+
+```java
+// List排序
+public static <T extends Comparable<? super T>> void sort(List<T> list) {
+    list.sort(null);
+}
+```
+
+###### binarySearch方法
+
+```java
+// List已排序
+public static <T> int binarySearch(List<? extends Comparable<? super T>> list, T key) {
+    // List可以随机访问或者长度小于二分查找阈值（5000）
+    if (list instanceof RandomAccess || list.size()<BINARYSEARCH_THRESHOLD)
+        return Collections.indexedBinarySearch(list, key);
+    else
+        return Collections.iteratorBinarySearch(list, key);
+}
+```
+
+###### reverse方法
+
+```java
+public static void reverse(List<?> list) {
+    int size = list.size();
+    // 长度小于反向阈值（18）或者List可以随机访问
+    if (size < REVERSE_THRESHOLD || list instanceof RandomAccess) {
+        // 把元素从中间分隔为两部分，交换两部分的值
+        for (int i=0, mid=size>>1, j=size-1; i<mid; i++, j--)
+            swap(list, i, j);
+    } else {
+        // instead of using a raw type here, it's possible to capture
+        // the wildcard but it will require a call to a supplementary
+        // private method
+        ListIterator fwd = list.listIterator();
+        ListIterator rev = list.listIterator(size);
+        for (int i=0, mid=list.size()>>1; i<mid; i++) {
+            Object tmp = fwd.next();
+            fwd.set(rev.previous());
+            rev.set(tmp);
+        }
+    }
+}
+```
+
