--- a/jdk1.8/集合工具类.md
+++ b/jdk1.8/集合工具类.md
@@ -183,3 +183,23 @@ public static void reverse(List<?> list) {
 }
 ```
 
+###### fill方法
+
+```java
+public static <T> void fill(List<? super T> list, T obj) {
+    int size = list.size();
+	// 长度小于填充阈值（25）或者List可以随机访问
+    if (size < FILL_THRESHOLD || list instanceof RandomAccess) {
+        for (int i=0; i<size; i++)
+            list.set(i, obj);
+    } else {
+        // 使用迭代器模式进行填充操作
+        ListIterator<? super T> itr = list.listIterator();
+        for (int i=0; i<size; i++) {
+            itr.next();
+            itr.set(obj);
+        }
+    }
+}
+```
+
