--- a/jdk1.8/并发辅助类.md
+++ b/jdk1.8/并发辅助类.md
@@ -30,7 +30,7 @@ static final class Node {
     static final Node SHARED = new Node();
     // 独占模式
     static final Node EXCLUSIVE = null;
-    // 当前结点由于超时或者interrupt被取消，一经设置，结点无法该表此状态。即该线程不会再次被阻塞
+    // 当前结点由于超时或者interrupt被取消，一经设置，结点无法改变此状态。即该线程不会再次被阻塞
     static final int CANCELLED =  1;
     // 当前结点的后继结点已经（或很快）被阻塞，所以当前结点必须在释放或者取消的时候唤醒它的后继结点
     static final int SIGNAL    = -1;
@@ -55,9 +55,9 @@ static final class Node {
 
 ```java
 public class ConditionObject implements Condition, java.io.Serializable {
-    // 头结点
+    // 条件队列的头结点
     private transient Node firstWaiter;
-    // 尾结点
+    // 条件队列的尾结点
     private transient Node lastWaiter;
 }
 ```
@@ -114,13 +114,16 @@ private Node enq(final Node node) {
     }
 }
 
-// 
+// 自旋获取锁
 final boolean acquireQueued(final Node node, int arg) {
+    // 默认获取锁失败
     boolean failed = true;
     try {
+        // 默认为非中断状态
         boolean interrupted = false;
         for (;;) {
             final Node p = node.predecessor();
+            // 当前结点的前驱结点为head且获取锁成功
             if (p == head && tryAcquire(arg)) {
                 setHead(node);
                 p.next = null; // help GC
@@ -155,8 +158,30 @@ public final boolean release(int arg) {
 
 ##### CountDownLatch
 
-```java
+等待其它线程执行完任务，再继续往下执行
 
+###### countDown方法
+
+```java
+// 使计数器减一
+public void countDown() {
+    sync.releaseShared(1);
+}
+```
+
+###### await方法
+
+```java
+// 使调用该方法的线程处于等待状态
+public void await() throws InterruptedException {
+    sync.acquireSharedInterruptibly(1);
+}
+
+// 计数器为0返回true；在计数器达到0之前超过了等待时间则返回false
+public boolean await(long timeout, TimeUnit unit)
+    throws InterruptedException {
+    return sync.tryAcquireSharedNanos(1, unit.toNanos(timeout));
+}
 ```
 
 ##### Semaphore
@@ -164,8 +189,6 @@ public final boolean release(int arg) {
 ```java
 
 ```
-
-
 
 ##### CyclicBarrier
 
