--- a/jdk1.8/并发辅助类.md
+++ b/jdk1.8/并发辅助类.md
@@ -186,13 +186,71 @@ public boolean await(long timeout, TimeUnit unit)
 
 ##### Semaphore
 
-```java
+信号量，控制同时访问资源的线程个数
 
+###### 构造方法
+
+```java
+// permits表示许可线程的数量
+public Semaphore(int permits) {
+    sync = new NonfairSync(permits);
+}
+
+// fair为true，则下次执行的线程为等待最久的线程
+public Semaphore(int permits, boolean fair) {
+    sync = fair ? new FairSync(permits) : new NonfairSync(permits);
+}
+```
+
+###### acquire方法
+
+```java
+// 阻塞并获取许可
+public void acquire() throws InterruptedException {
+    sync.acquireSharedInterruptibly(1);
+}
+```
+
+###### release方法
+
+```java
+// 释放许可
+public void release() {
+    sync.releaseShared(1);
+}
 ```
 
 ##### CyclicBarrier
 
-```java
+让所有线程都等待完成再继续往下执行
 
+###### 构造方法
+
+```java
+// 用于线程到达同步点时，优先执行线程barrierAction
+public CyclicBarrier(int parties, Runnable barrierAction) {
+    if (parties <= 0) throw new IllegalArgumentException();
+    this.parties = parties;
+    this.count = parties;
+    this.barrierCommand = barrierAction;
+}
+
+// parties表示参与线程的个数
+public CyclicBarrier(int parties) {
+    this(parties, null);
+}
+```
+
+###### await方法
+
+```java
+// 调用await方法的线程表示已到达同步点，然后当前线程被阻塞，直到parties个线程调用await方法
+public int await() throws InterruptedException, BrokenBarrierException {
+    try {
+        return dowait(false, 0L);
+    } catch (TimeoutException toe) {
+        throw new Error(toe); // cannot happen
+    }
+}
 ```
 
