--- a/jdk1.8/并发辅助类.md
+++ b/jdk1.8/并发辅助类.md
@@ -30,9 +30,9 @@ static final class Node {
     static final Node SHARED = new Node();
     // 独占模式
     static final Node EXCLUSIVE = null;
-    // 当前结点由于超时或者interrupt被取消，一经设置，结点无法改变此状态。即该线程不会再次被阻塞
+    // 当前结点由于超时或者interrupt从同步队列中取消，一经设置，结点无法改变此状态。即该线程不会再次被阻塞
     static final int CANCELLED =  1;
-    // 当前结点的后继结点已经（或很快）被阻塞，所以当前结点必须在释放或者取消的时候唤醒它的后继结点
+    // 当前结点的后继结点已经（或很快）被阻塞（等待状态），所以当前结点必须在释放或者取消的时候唤醒它的后继结点
     static final int SIGNAL    = -1;
     // 当前结点在条件队列中
     static final int CONDITION = -2;
@@ -65,19 +65,19 @@ public class ConditionObject implements Condition, java.io.Serializable {
 ###### acquire
 
 ```java
-// 独占式同步状态的获取
+// 独占式获取同步状态，获取失败则插入同步队列
 public final void acquire(int arg) {
     if (!tryAcquire(arg) &&
         acquireQueued(addWaiter(Node.EXCLUSIVE), arg))
         selfInterrupt();
 }
 
-// 调用此方法的线程在独占模式下获取对象状态
+// 调用此方法的线程在独占模式下获取同步状态
 protected boolean tryAcquire(int arg) {
     throw new UnsupportedOperationException();
 }
 
-// 将调用此方法的线程封装成一个结点并放入同步队列
+// 将调用此方法的线程封装成一个Node结点并放入同步队列
 private Node addWaiter(Node mode) {
     // 生成新结点，默认为独占模式
     Node node = new Node(Thread.currentThread(), mode);
@@ -123,13 +123,14 @@ final boolean acquireQueued(final Node node, int arg) {
         boolean interrupted = false;
         for (;;) {
             final Node p = node.predecessor();
-            // 当前结点的前驱结点为head且获取锁成功
+            // 当前结点的前驱结点为head且成功获取同步状态，即可以获取独占式锁
             if (p == head && tryAcquire(arg)) {
                 setHead(node);
                 p.next = null; // help GC
                 failed = false;
                 return interrupted;
             }
+            // 获取锁失败，线程进入等待状态（Node.SIGNAL）等待获取独占式锁
             if (shouldParkAfterFailedAcquire(p, node) &&
                 parkAndCheckInterrupt())
                 interrupted = true;
@@ -144,7 +145,7 @@ final boolean acquireQueued(final Node node, int arg) {
 ###### release
 
 ```java
-// 独占式同步状态的释放
+// 独占式释放同步状态，该方法会唤醒在同步队列中的下一个结点
 public final boolean release(int arg) {
     if (tryRelease(arg)) {
         Node h = head;
